# Ableton-Hub

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
.github/: CODEOWNERS
.github/workflows/: build_installers.yml  create_release_from_run.yml
.specify/: init-options.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
docs/: AGENTS.md  DEPENDENCY_AUDIT.md  FAQ.md  FEATURE_DEVELOPMENT.md  FIRST_TIME_SETUP.md  GUI_WIDGET_AUDIT.md  INSTALLATION_MAC.md  INSTALLATION_WINDOWS.md  LOGGING.md  LOGGING_IMPLEMENTATION_SUMMARY.md  NEW_FEATURES.md  NEW_USER_EXPERIENCE_PLAN.md  PLANNED_FEATURES.plan  QUICK_REFERENCE.md  REFACTORING_REVIEW.md  SIGNAL_FLOW_DOCUMENTATION.md
scripts/: Connect-SimplySign.ps1  build_exe.bat  test_release.bat
specs/001-ml-similarity-cluster-tree/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ml-similarity-cluster-tree/checklists/: requirements.md
specs/001-ml-similarity-cluster-tree/contracts/: similarity_tree_result.schema.json
specs/002-tree-branch-similarity-order/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-tree-branch-similarity-order/checklists/: requirements.md
src/: __init__.py  __main__.py  app.py  config.py
src/database/: __init__.py  db.py  migrations.py  models.py
src/database/repositories/: __init__.py  collection_repository.py  location_repository.py  project_repository.py
src/resources/: FTUE.md  __init__.py
src/resources/icons/: __init__.py
src/resources/images/: __init__.py
src/services/: __init__.py  als_parser.py  audio_preview.py  branch_member_ordering.py  live_detector.py  marker_extractor.py  ml_clustering.py  scanner.py  similarity_tree_models.py  similarity_tree_service.py  smart_collections.py  song_name_generator.py  soundcheck_service.py  update_checker.py  watcher.py
src/ui/: main_window.py  theme.py
src/ui/controllers/: __init__.py  collection_controller.py  live_controller.py  project_controller.py  scan_controller.py  view_controller.py
src/ui/dialogs/: __init__.py  add_live_installation.py  ftue_dialog.py  log_viewer_dialog.py  project_details.py  settings_dialog.py  similar_projects_dialog.py  smart_collection.py  song_name_generator_dialog.py  update_dialog.py
src/ui/managers/: __init__.py  menu_bar_manager.py  toolbar_manager.py  view_manager.py
src/ui/widgets/: collection_view.py  find_audio_exports_view.py  location_panel.py  project_card.py  project_grid.py  project_properties_view.py  recommendations_panel.py  search_bar.py  sidebar.py  similarity_tree_item_delegate.py  similarity_tree_view.py  tag_editor.py
src/ui/workers/: __init__.py  als_parser_worker.py  audio_scan_worker.py  backup_scan_worker.py  base_worker.py  similar_projects_worker.py  similarity_tree_worker.py
src/utils/: fuzzy_match.py  logging.py  paths.py
tests/: analyze_als_structure.py
tests/unit/: test_branch_similarity_order.py  test_similarity_tree_clustering.py
